build with feature/tree-sitter

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       # This is the shortest job, but in this case it pulls all MSYS/MINGW64
       - name: Clone Emacs
         id: clone_repo
-        run: .\emacs-build.cmd --clone
+        run: .\emacs-build.cmd --clone --repo https://github.com/kiennq/emacs.git
 
       - name: See free space
         run: Get-PSDrive
