--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,14 +92,14 @@ jobs:
 
       - name: Build Emacs
         if: runner.os == 'Windows'
-        # Require --nativecomp and --with-* flags, else the deps will not be included properly
+        # Require --with-* flags, else the deps will not be included properly
         run: |
-          .\emacs-build.cmd --nativecomp --slim --with-rsvg --branch ${{ needs.prepare_env.outputs.commit }} --build
+          .\emacs-build.cmd --slim --with-rsvg --branch ${{ needs.prepare_env.outputs.commit }} --build
 
       - name: Package Emacs
         if: runner.os == 'Windows'
         run: |
-          .\emacs-build.cmd --nativecomp --slim --with-rsvg --branch ${{ needs.prepare_env.outputs.commit }} --pack-all
+          .\emacs-build.cmd --slim --with-rsvg --branch ${{ needs.prepare_env.outputs.commit }} --pack-all
 
       - name: Build and pack Emacs
         if: runner.os != 'Windows'
