--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,7 @@ jobs:
         if: runner.os == 'Windows'
         # Require --with-* flags, else the deps will not be included properly
         run: |
-          .\emacs-build.cmd --slim --with-rsvg --branch ${{ needs.prepare_env.outputs.commit }} --build
+          .\emacs-build.cmd --slim --with-rsvg --without-toolkit-scroll-bars --branch ${{ needs.prepare_env.outputs.commit }} --build
 
       - name: Package Emacs
         if: runner.os == 'Windows'
