--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,11 +90,20 @@ jobs:
           git clone --filter=tree:0 --no-checkout $EMACS_REPO .
           git checkout ${{ needs.prepare_env.outputs.commit }}
 
+      - name: Install deps
+        if: runner.os == 'Windows'
+        shell: msys2 {0}
+        run: .github/scripts/install-libs.sh
+
+      - name: Install deps
+        if: runner.os != 'Windows'
+        run: sudo .github/scripts/install-libs.sh
+
       - name: Build Emacs
         if: runner.os == 'Windows'
         # Require --with-* flags, else the deps will not be included properly
         run: |
-          .\emacs-build.cmd --slim --with-rsvg --without-toolkit-scroll-bars --branch ${{ needs.prepare_env.outputs.commit }} --build
+          .\emacs-build.cmd --slim --with-rsvg --with-mps --branch ${{ needs.prepare_env.outputs.commit }} --build
 
       - name: Package Emacs
         if: runner.os == 'Windows'
@@ -106,7 +115,7 @@ jobs:
         run: |
           chmod 755 ./emacs-build-unix.sh
           mkdir -p ./zips
-          ./emacs-build-unix.sh -s ./git/emacs/ -v ${{ needs.prepare_env.outputs.version }} -d ./zips
+          ./emacs-build-unix.sh -s ./git/emacs/ -v ${{ needs.prepare_env.outputs.version }} -d ./zips --with-mps --without-xwidgets
 
       # Upload release for each build
       - name: Upload binaries to release
