Build with debug information

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           - os: windows-2022
             shell: powershell
             msystem: UCRT64
-            build_options: --variant mps --with-rsvg --with-mps --no-strip
+            build_options: --variant mps --with-rsvg --with-mps --no-strip --enable-build-details
           - os: ubuntu-22.04
             shell: bash
             build_options: --with-rsvg --with-mps --without-xwidgets
